--- a/chat-web/package.json
+++ b/chat-web/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -40,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
